--- a/src/_eleventy/layouts/base.html
+++ b/src/_eleventy/layouts/base.html
@@ -23,7 +23,7 @@
       href="/assets/favicons/favicon-16x16.png"
     />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#175768" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#58a2e6" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
